test/src/e2e_vm_tests/test_programs/should_fail/repeated_abi_declaration/src/main.sw
contract;

abi MyContract {
    fn foo() -> u64;
}

abi MyContract {
    fn bar() -> u64;
}